upmc/k8s/upmc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upmc
  namespace: push
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upmc
  template:
    metadata:
      labels:
        app: upmc
    spec:
      securityContext:
        fsGroup: 1000            
      containers:
        - name: upmc
          image: kimhr/upmc:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: share-volume
#              mountPath: /data/share
              mountPath: /msg
              subPath: upmc/msg     # <-- 호스트 폴더 중 upmc/msg 내용만 가져옴              
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

      volumes:
        - name: share-volume
          hostPath:
            path: /kimhr/work/nas/share
            type: DirectoryOrCreate

#          resources:
#            requests:
#              memory: "4Gi"
#              cpu: "2.0"
#            limits:
#              memory: "8Gi"
#              cpu: "4.0"
